// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner - no icon 1`] = `
<div
  className="default css-qc8b1t-StyledBanner eyaavg40"
>
  <div
    className="css-2ux9ul-BannerContentWrap eyaavg41"
  >
    <div
      className="css-izwvz-StyledTopic eyaavg43"
    >
      Comprehensive API documentation for developers and businesses.
    </div>
    <div
      className="css-wbadgb-StyledDescription eyaavg44"
    >
      Step-by-step instructions to get you set up in the Dwolla API
    </div>
  </div>
</div>
`;

exports[`Banner - with Button 1`] = `
<div
  className="default css-qc8b1t-StyledBanner eyaavg40"
>
  <div
    className="css-2ux9ul-BannerContentWrap eyaavg41"
  >
    <div
      className="css-izwvz-StyledTopic eyaavg43"
    >
      Comprehensive API documentation for developers and businesses.
    </div>
    <div
      className="css-wbadgb-StyledDescription eyaavg44"
    >
      Step-by-step instructions to get you set up in the Dwolla API
    </div>
    <a
      className="primary large css-qnxw47-StyledLink-buttonStyles-buttonStyles e12ysvgk1"
      href="https://accounts-sandbox.dwolla.com/login"
      onClick={[Function]}
      onMouseEnter={[Function]}
      target="_blank"
    >
      Discover the Possibilities
    </a>
  </div>
</div>
`;

exports[`Banner - with Extra Padding for Overlapping Cards 1`] = `
<div
  className="overlapped css-qc8b1t-StyledBanner eyaavg40"
>
  <div
    className="css-2ux9ul-BannerContentWrap eyaavg41"
  >
    <div
      className="css-izwvz-StyledTopic eyaavg43"
    >
      Comprehensive API documentation for developers and businesses.
    </div>
    <div
      className="css-wbadgb-StyledDescription eyaavg44"
    >
      Step-by-step instructions to get you set up in the Dwolla API
    </div>
    <a
      className="primary large css-qnxw47-StyledLink-buttonStyles-buttonStyles e12ysvgk1"
      href="https://accounts-sandbox.dwolla.com/login"
      onClick={[Function]}
      onMouseEnter={[Function]}
      target="_blank"
    >
      Discover the Possibilities
    </a>
  </div>
</div>
`;

exports[`Banner - with Filters 1`] = `
<div
  className="filters default css-qc8b1t-StyledBanner eyaavg40"
>
  <div
    className="css-2ux9ul-BannerContentWrap eyaavg41"
  >
    <img
      alt=""
      className="css-dt0gsi-StyledIcon eyaavg42"
      src="test-image-stub"
    />
    <div
      className="css-izwvz-StyledTopic eyaavg43"
    >
      Guides
    </div>
    <div
      className="css-wbadgb-StyledDescription eyaavg44"
    >
      Step-by-step instructions to get you set up in the Dwolla API
    </div>
  </div>
  <div
    className="css-1wmc1h7-StyledFilter eyaavg45"
  >
    <div>
      <div
        className="css-18c9go6-TabsContainerStyle efq5uj30"
      >
        <div
          className="tab is-active css-rdl1v4-TabStyle efq5uj31"
          onClick={[Function]}
        >
          ALL
        </div>
        <div
          className="tab css-rdl1v4-TabStyle efq5uj31"
          onClick={[Function]}
        >
          GET BUILDING
        </div>
        <div
          className="tab css-rdl1v4-TabStyle efq5uj31"
          onClick={[Function]}
        >
          PREREQUISITES
        </div>
        <div
          className="tab css-rdl1v4-TabStyle efq5uj31"
          onClick={[Function]}
        >
          FEATURES
        </div>
      </div>
      <div
        className="css-n6mzzn-SelectWrapper efq5uj32"
      >
        <div
          className=" css-2b097c-container"
          onKeyDown={[Function]}
        >
          <div
            className=" css-1xxipdn-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className=" css-86rg1c-ValueContainer"
            >
              <div
                className=" css-1me8bqy-singleValue"
              >
                ALL
              </div>
              <input
                aria-autocomplete="list"
                className="css-62g3xt-dummyInput"
                disabled={false}
                id="react-select-2-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={true}
                tabIndex="0"
                value=""
              />
            </div>
            <div
              className=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className=" css-43ykx9-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className=" css-unjupu-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <img
                  alt=""
                  className=" css-vfym8x-StyledDefaultDropdownIcon e1oqaitj0"
                  src="test-image-stub"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Default Banner 1`] = `
<div
  className="default css-qc8b1t-StyledBanner eyaavg40"
>
  <div
    className="css-2ux9ul-BannerContentWrap eyaavg41"
  >
    <img
      alt=""
      className="css-dt0gsi-StyledIcon eyaavg42"
      src="test-image-stub"
    />
    <div
      className="css-izwvz-StyledTopic eyaavg43"
    >
      Guides
    </div>
    <div
      className="css-wbadgb-StyledDescription eyaavg44"
    >
      Step-by-step instructions to get you set up in the Dwolla API
    </div>
  </div>
</div>
`;
